3-laravel-app/ops/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: nginx
        image: registry.digitalocean.com/tradigital/laravel-nginx:0658a8b1
        ports:
          - containerPort: 80
      - name: laravel-app
        image: registry.digitalocean.com/tradigital/laravel:0658a8b1
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 9000
